Add new actions to controllers and services