@@ -4,20 +4,20 @@ import org.springframework.stereotype.Service;
 
 import com.talentofuturo.geoSense_api.dto.LocationDTO;
 import com.talentofuturo.geoSense_api.entity.Location;
+import com.talentofuturo.geoSense_api.exception.ResourceNotFoundException;
 import com.talentofuturo.geoSense_api.mapper.LocationMapper;
 import com.talentofuturo.geoSense_api.repository.LocationRepository;
 import com.talentofuturo.geoSense_api.service.interfaces.ILocationService;
-
-import lombok.AllArgsConstructor;
+import jakarta.transaction.Transactional;
+import lombok.RequiredArgsConstructor;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Implementation of location management operations.
  */
 @Service
-@AllArgsConstructor
+@RequiredArgsConstructor
 public class LocationService implements ILocationService {
     private final LocationRepository locationRepository;
 
@@ -25,7 +25,7 @@ public class LocationService implements ILocationService {
     public List<LocationDTO> getAllLocations() {
         return locationRepository.findAll().stream()
                 .map(LocationMapper::mapLocation)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -33,5 +33,28 @@ public class LocationService implements ILocationService {
         Location location = LocationMapper.mapDTO(locationDTO);
         Location savedLocation = locationRepository.save(location);
         return LocationMapper.mapLocation(savedLocation);
+    }
+
+    @Override
+    @Transactional
+    public LocationDTO updateLocation(Long id, LocationDTO locationDTO) {
+        Location existingLocation = locationRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Location", "id", id));
+
+        existingLocation.setLocationName(locationDTO.getLocationName());
+        existingLocation.setLocationCountry(locationDTO.getLocationCountry());
+        existingLocation.setLocationCity(locationDTO.getLocationCity());
+        existingLocation.setLocationMeta(locationDTO.getLocationMeta());
+
+        return LocationMapper.mapLocation(locationRepository.save(existingLocation));
+    }
+
+    @Override
+    @Transactional
+    public void deleteLocation(Long id) {
+        if (!locationRepository.existsById(id)) {
+            throw new ResourceNotFoundException("Location", "id", id);
+        }
+        locationRepository.deleteById(id);
     }
 }
